created auth and dashbaord pages

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>TLWEB</title>
+    <title>To-Do WEB</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -14,6 +14,8 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Bitcount+Prop+Single+Ink:slnt,wght,CRSV,SZP1@-8,600,1,10&display=swap');
       @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300..700&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Barrio&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&display=swap');
     </style>
   </head>
   <body>
